# ebu-libmxfpp

./: .gitignore  Makefile.am  README.md  configure.ac  gen_scm_version.sh  libMXF++.pc.in
examples/: Makefile.am
examples/ArchiveMXFReader/: ArchiveMXFContentPackage.cpp  ArchiveMXFContentPackage.h  ArchiveMXFReader.cpp  ArchiveMXFReader.h  Makefile.am  test_archivemxfreader.cpp
examples/ArchiveMXFWriter/: ArchiveMXFExtensionsDataModel.h  ArchiveMXFWriter.cpp  ArchiveMXFWriter.h  Makefile.am  test_archivemxfwriter.cpp
examples/AvidClipWriter/: AvidClipWriter.cpp  AvidClipWriter.h  Makefile.am  main.cpp
examples/Common/: Makefile.am
examples/D10MXFOP1AWriter/: D10MXFOP1AWriter.cpp  D10MXFOP1AWriter.h  Makefile.am  test_d10mxfop1awriter.cpp
examples/OPAtomReader/: FixedSizeEssenceParser.cpp  FrameOffsetIndexTable.cpp  FrameOffsetIndexTable.h  Makefile.am  OPAtomTrackReader.cpp  OPAtomTrackReader.h  PCMEssenceParser.cpp  RawEssenceParser.cpp  VariableSizeEssenceParser.cpp  test_opatomreader.cpp
libMXF++/: AvidHeaderMetadata.cpp  AvidHeaderMetadata.h  DataModel.cpp  DataModel.h  File.cpp  File.h  HeaderMetadata.cpp  HeaderMetadata.h  IndexTable.cpp  IndexTable.h  MXF.h  MXFException.cpp  MXFException.h  MXFTypes.cpp  MXFTypes.h  MXFVersion.cpp  MXFVersion.h  Makefile.am  MetadataSet.cpp  MetadataSet.h  Partition.cpp  Partition.h
libMXF++/extensions/: Makefile.am  TaggedValue.cpp  TaggedValue.h
libMXF++/metadata/: AES3AudioDescriptor.h  CDCIEssenceDescriptor.h  ContentStorage.h  DMFramework.h  DMSegment.cpp  DMSegment.h  DMSet.h  DMSourceClip.h  EssenceContainerData.h  EventTrack.h  FileDescriptor.h  GenericDataEssenceDescriptor.h  GenericDescriptor.h  GenericPackage.cpp  GenericPackage.h  GenericPictureEssenceDescriptor.h  GenericSoundEssenceDescriptor.h  GenericTrack.h  Identification.h  InterchangeObject.h  Locator.h  MPEGVideoDescriptor.h  Makefile.am  MaterialPackage.h  Metadata.h  MultipleDescriptor.h  NetworkLocator.h  Preface.cpp  Preface.h  RGBAEssenceDescriptor.h  Sequence.h  SourceClip.h  SourcePackage.cpp  SourcePackage.h  StaticTrack.h  StructuralComponent.h  TextLocator.h  TimecodeComponent.h  Track.h  WaveAudioDescriptor.h
libMXF++/metadata/base/: AES3AudioDescriptorBase.cpp  AES3AudioDescriptorBase.h  CDCIEssenceDescriptorBase.h  ContentStorageBase.cpp  ContentStorageBase.h  DMFrameworkBase.h  DMSegmentBase.cpp  DMSegmentBase.h  DMSetBase.h  DMSourceClipBase.h  EssenceContainerDataBase.h  EventTrackBase.h  FileDescriptorBase.h  GenericDataEssenceDescriptorBase.h  GenericDescriptorBase.cpp  GenericDescriptorBase.h  GenericPackageBase.cpp  GenericPackageBase.h  GenericPictureEssenceDescriptorBase.cpp  GenericPictureEssenceDescriptorBase.h  GenericSoundEssenceDescriptorBase.cpp  GenericSoundEssenceDescriptorBase.h  GenericTrackBase.cpp  GenericTrackBase.h  IdentificationBase.h  InterchangeObjectBase.h  LocatorBase.h  MCALabelSubDescriptorBase.cpp  MCALabelSubDescriptorBase.h  MPEGVideoDescriptorBase.cpp  MPEGVideoDescriptorBase.h  Makefile.am  MaterialPackageBase.h  MultipleDescriptorBase.cpp  MultipleDescriptorBase.h  NetworkLocatorBase.h  PrefaceBase.cpp  PrefaceBase.h  RGBAEssenceDescriptorBase.cpp  RGBAEssenceDescriptorBase.h  (+13 more)
msvc_build/: Makefile.am  libMXF++.sln
msvc_build/examples/D10MXFOP1AWriter/: D10MXFOP1AWriter.vcproj  test_d10mxfop1awriter.vcproj
msvc_build/examples/archivemxfreader/: archivemxfreader.vcproj  test_archivemxfreader.vcproj
msvc_build/examples/archivemxfwriter/: archivemxfwriter.vcproj  test_archivemxfwriter.vcproj
msvc_build/examples/avidclipwriter/: avidclipwriter.vcproj  test_avidclipwriter.vcproj
msvc_build/libMXF++/: libMXF++.vcproj
msvc_build/vs10/: Makefile.am  libMXF++.sln  mxfpp_scm_version.h
msvc_build/vs10/examples/D10MXFOP1AWriter/: D10MXFOP1AWriter.vcproj  D10MXFOP1AWriter.vcxproj  D10MXFOP1AWriter.vcxproj.filters  test_d10mxfop1awriter.vcproj  test_d10mxfop1awriter.vcxproj  test_d10mxfop1awriter.vcxproj.filters
msvc_build/vs10/examples/archivemxfreader/: archivemxfreader.vcxproj  test_archivemxfreader.vcxproj
msvc_build/vs10/examples/archivemxfwriter/: archivemxfwriter.vcxproj  test_archivemxfwriter.vcxproj
msvc_build/vs10/examples/avidclipwriter/: avidclipwriter.vcxproj  test_avidclipwriter.vcxproj
msvc_build/vs10/libMXF++/: libMXF++.vcxproj  libMXF++.vcxproj.filters
msvc_build/vs10/tools/gen_classes/: gen_classes.vcxproj
msvc_build/vs10/tools/gen_ebucore_classes/: gen_ebucore_classes.vcxproj
msvc_build/vs8/: Makefile.am  libMXF++.sln
msvc_build/vs8/examples/archivemxfreader/: archivemxfreader.vcproj  test_archivemxfreader.vcproj
msvc_build/vs8/examples/archivemxfwriter/: archivemxfwriter.vcproj  test_archivemxfwriter.vcproj
msvc_build/vs8/examples/avidclipwriter/: avidclipwriter.vcproj  test_avidclipwriter.vcproj
msvc_build/vs8/libMXF++/: libMXF++.vcproj
test/: Makefile.am  simple.cpp  simple.test
tools/: Makefile.am
tools/gen_classes/: ebucore_declare_references.inc  ebucore_extensions_data_model.h  gen_metadata_classes.cpp
tools/gen_ebucore_classes/: EBUCoreDMS.cpp  EBUCoreDMS.h  ebucore_declare_references.inc  gen_metadata_classes.cpp
