EXTRA_DIST = \
	libMXF++.sln \
	libMXF++/libMXF++.vcproj \
	examples/archivemxfreader/archivemxfreader.vcproj \
	examples/archivemxfreader/test_archivemxfreader.vcproj \
	examples/archivemxfwriter/archivemxfwriter.vcproj \
	examples/archivemxfwriter/test_archivemxfwriter.vcproj \
	examples/avidclipwriter/avidclipwriter.vcproj \
	examples/avidclipwriter/test_avidclipwriter.vcproj \
	examples/D10MXFOP1AWriter/D10MXFOP1AWriter.vcproj \
	examples/D10MXFOP1AWriter/test_d10mxfop1awriter.vcproj

