SUBDIRS = base .

noinst_LTLIBRARIES = libmetadata.la

libmetadata_la_SOURCES = \
	AES3AudioDescriptor.cpp \
	ANCDataDescriptor.cpp \
	AVCSubDescriptor.cpp \
	CDCIEssenceDescriptor.cpp \
	ContentStorage.cpp \
	DMFramework.cpp \
	DMSegment.cpp \
	DMSet.cpp \
	DMSourceClip.cpp \
	EssenceContainerData.cpp \
	EventTrack.cpp \
	FileDescriptor.cpp \
	GenericDataEssenceDescriptor.cpp \
	GenericDescriptor.cpp \
	GenericPackage.cpp \
	GenericPictureEssenceDescriptor.cpp \
	GenericSoundEssenceDescriptor.cpp \
	GenericTrack.cpp \
	Identification.cpp \
	InterchangeObject.cpp \
	Locator.cpp \
	MaterialPackage.cpp \
	MPEGVideoDescriptor.cpp \
	MultipleDescriptor.cpp \
	NetworkLocator.cpp \
	Preface.cpp \
	RGBAEssenceDescriptor.cpp \
	Sequence.cpp \
	SourceClip.cpp \
	SourcePackage.cpp \
	StaticTrack.cpp \
	StructuralComponent.cpp \
	SubDescriptor.cpp \
	TextLocator.cpp \
	TimecodeComponent.cpp \
	Track.cpp \
	VBIDataDescriptor.cpp \
	WaveAudioDescriptor.cpp


libmetadata_la_CXXFLAGS = $(LIBMXFPP_CFLAGS)



library_includedir = ${includedir}/libMXF++-@LIBMXFPP_MAJORMINOR@/libMXF++/metadata
library_include_HEADERS = \
	AES3AudioDescriptor.h \
	ANCDataDescriptor.h \
	AVCSubDescriptor.h \
	CDCIEssenceDescriptor.h \
	ContentStorage.h \
	DMFramework.h \
	DMSegment.h \
	DMSet.h \
	DMSourceClip.h \
	EssenceContainerData.h \
	EventTrack.h \
	FileDescriptor.h \
	GenericDataEssenceDescriptor.h \
	GenericDescriptor.h \
	GenericPackage.h \
	GenericPictureEssenceDescriptor.h \
	GenericSoundEssenceDescriptor.h \
	GenericTrack.h \
	Identification.h \
	InterchangeObject.h \
	Locator.h \
	MaterialPackage.h \
	Metadata.h \
	MPEGVideoDescriptor.h \
	MultipleDescriptor.h \
	NetworkLocator.h \
	Preface.h \
	RGBAEssenceDescriptor.h \
	Sequence.h \
	SourceClip.h \
	SourcePackage.h \
	StaticTrack.h \
	StructuralComponent.h \
	SubDescriptor.h \
	TextLocator.h \
	TimecodeComponent.h \
	Track.h \
	VBIDataDescriptor.h \
	WaveAudioDescriptor.h
