SUBDIRS = base .

noinst_LTLIBRARIES = libmetadata.la

libmetadata_la_SOURCES = \
	AES3AudioDescriptor.cpp \
	ANCDataDescriptor.cpp \
	AudioChannelLabelSubDescriptor.cpp \
	AVCSubDescriptor.cpp \
	CDCIEssenceDescriptor.cpp \
	ContentStorage.cpp \
	DCTimedTextDescriptor.cpp \
	DCTimedTextResourceSubDescriptor.cpp \
	DMFramework.cpp \
	DMSegment.cpp \
	DMSet.cpp \
	DMSourceClip.cpp \
	EssenceContainerData.cpp \
	EventTrack.cpp \
	FileDescriptor.cpp \
	GenericDataEssenceDescriptor.cpp \
	GenericDescriptor.cpp \
	GenericPackage.cpp \
	GenericPictureEssenceDescriptor.cpp \
	GenericSoundEssenceDescriptor.cpp \
	GenericStreamTextBasedSet.cpp \
	GenericTrack.cpp \
	GroupOfSoundfieldGroupsLabelSubDescriptor.cpp \
	Identification.cpp \
	InterchangeObject.cpp \
	Locator.cpp \
	MaterialPackage.cpp \
	MCALabelSubDescriptor.cpp \
	MPEGVideoDescriptor.cpp \
	MultipleDescriptor.cpp \
	NetworkLocator.cpp \
	Preface.cpp \
	RGBAEssenceDescriptor.cpp \
	Sequence.cpp \
	SoundfieldGroupLabelSubDescriptor.cpp \
	SourceClip.cpp \
	SourcePackage.cpp \
	StaticTrack.cpp \
	StructuralComponent.cpp \
	SubDescriptor.cpp \
	TextBasedDMFramework.cpp \
	TextBasedObject.cpp \
	TextLocator.cpp \
	TimecodeComponent.cpp \
	Track.cpp \
	UTF8TextBasedSet.cpp \
	UTF16TextBasedSet.cpp \
	VBIDataDescriptor.cpp \
	VC2SubDescriptor.cpp \
	WaveAudioDescriptor.cpp


libmetadata_la_CXXFLAGS = $(LIBMXFPP_CFLAGS)



library_includedir = ${includedir}/libMXF++-@LIBMXFPP_MAJORMINOR@/libMXF++/metadata
library_include_HEADERS = \
	AES3AudioDescriptor.h \
	ANCDataDescriptor.h \
	AudioChannelLabelSubDescriptor.h \
	AVCSubDescriptor.h \
	CDCIEssenceDescriptor.h \
	ContentStorage.h \
	DCTimedTextDescriptor.h \
	DCTimedTextResourceSubDescriptor.h \
	DMFramework.h \
	DMSegment.h \
	DMSet.h \
	DMSourceClip.h \
	EssenceContainerData.h \
	EventTrack.h \
	FileDescriptor.h \
	GenericDataEssenceDescriptor.h \
	GenericDescriptor.h \
	GenericPackage.h \
	GenericPictureEssenceDescriptor.h \
	GenericSoundEssenceDescriptor.h \
	GenericStreamTextBasedSet.h \
	GenericTrack.h \
	GroupOfSoundfieldGroupsLabelSubDescriptor.h \
	Identification.h \
	InterchangeObject.h \
	Locator.h \
	MaterialPackage.h \
	Metadata.h \
	MCALabelSubDescriptor.h \
	MPEGVideoDescriptor.h \
	MultipleDescriptor.h \
	NetworkLocator.h \
	Preface.h \
	RGBAEssenceDescriptor.h \
	Sequence.h \
	SoundfieldGroupLabelSubDescriptor.h \
	SourceClip.h \
	SourcePackage.h \
	StaticTrack.h \
	StructuralComponent.h \
	SubDescriptor.h \
	TextBasedDMFramework.h \
	TextBasedObject.h \
	TextLocator.h \
	TimecodeComponent.h \
	Track.h \
	UTF8TextBasedSet.h \
	UTF16TextBasedSet.h \
	VBIDataDescriptor.h \
	VC2SubDescriptor.h \
	WaveAudioDescriptor.h
