EXTRA_DIST = \
	inttypes.h \
	libMXF++.sln \
	libMXF++/libMXF++.vcxproj \
	libMXF++/libMXF++.vcxproj.filters \
	libMXF++/gen_scm_version.cmd \
	examples/D10MXFOP1AWriter/D10MXFOP1AWriter.vcxproj \
	examples/D10MXFOP1AWriter/D10MXFOP1AWriter.vcxproj.filters \
	examples/D10MXFOP1AWriter/test_d10mxfop1awriter.vcxproj \
	examples/D10MXFOP1AWriter/test_d10mxfop1awriter.vcxproj.filters

