noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = \
	AES3AudioDescriptorBase.cpp \
	ANCDataDescriptorBase.cpp \
	AVCSubDescriptorBase.cpp \
	CDCIEssenceDescriptorBase.cpp \
	ContentStorageBase.cpp \
	DMFrameworkBase.cpp \
	DMSegmentBase.cpp \
	DMSetBase.cpp \
	DMSourceClipBase.cpp \
	EssenceContainerDataBase.cpp \
	EventTrackBase.cpp \
	FileDescriptorBase.cpp \
	GenericDataEssenceDescriptorBase.cpp \
	GenericDescriptorBase.cpp \
	GenericPackageBase.cpp \
	GenericPictureEssenceDescriptorBase.cpp \
	GenericSoundEssenceDescriptorBase.cpp \
	GenericTrackBase.cpp \
	IdentificationBase.cpp \
	InterchangeObjectBase.cpp \
	LocatorBase.cpp \
	MaterialPackageBase.cpp \
	MPEGVideoDescriptorBase.cpp \
	MultipleDescriptorBase.cpp \
	NetworkLocatorBase.cpp \
	PrefaceBase.cpp \
	RGBAEssenceDescriptorBase.cpp \
	SequenceBase.cpp \
	SourceClipBase.cpp \
	SourcePackageBase.cpp \
	StaticTrackBase.cpp \
	StructuralComponentBase.cpp \
	SubDescriptorBase.cpp \
	TextLocatorBase.cpp \
	TimecodeComponentBase.cpp \
	TrackBase.cpp \
	VBIDataDescriptorBase.cpp \
	WaveAudioDescriptorBase.cpp


libbase_la_CXXFLAGS = $(LIBMXFPP_CFLAGS)



library_includedir = ${includedir}/libMXF++-@LIBMXFPP_MAJORMINOR@/libMXF++/metadata/base
library_include_HEADERS = \
	AES3AudioDescriptorBase.h \
	ANCDataDescriptorBase.h \
	AVCSubDescriptorBase.h \
	CDCIEssenceDescriptorBase.h \
	ContentStorageBase.h \
	DMFrameworkBase.h \
	DMSegmentBase.h \
	DMSetBase.h \
	DMSourceClipBase.h \
	EssenceContainerDataBase.h \
	EventTrackBase.h \
	FileDescriptorBase.h \
	GenericDataEssenceDescriptorBase.h \
	GenericDescriptorBase.h \
	GenericPackageBase.h \
	GenericPictureEssenceDescriptorBase.h \
	GenericSoundEssenceDescriptorBase.h \
	GenericTrackBase.h \
	IdentificationBase.h \
	InterchangeObjectBase.h \
	LocatorBase.h \
	MaterialPackageBase.h \
	MPEGVideoDescriptorBase.h \
	MultipleDescriptorBase.h \
	NetworkLocatorBase.h \
	PrefaceBase.h \
	RGBAEssenceDescriptorBase.h \
	SequenceBase.h \
	SourceClipBase.h \
	SourcePackageBase.h \
	StaticTrackBase.h \
	StructuralComponentBase.h \
	SubDescriptorBase.h \
	TextLocatorBase.h \
	TimecodeComponentBase.h \
	TrackBase.h \
	VBIDataDescriptorBase.h \
	WaveAudioDescriptorBase.h
