noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = \
	AES3AudioDescriptorBase.cpp \
	ANCDataDescriptorBase.cpp \
	AudioChannelLabelSubDescriptorBase.cpp \
	AVCSubDescriptorBase.cpp \
	CDCIEssenceDescriptorBase.cpp \
	ContentStorageBase.cpp \
	DCTimedTextDescriptorBase.cpp \
	DCTimedTextResourceSubDescriptorBase.cpp \
	DMFrameworkBase.cpp \
	DMSegmentBase.cpp \
	DMSetBase.cpp \
	DMSourceClipBase.cpp \
	EssenceContainerDataBase.cpp \
	EventTrackBase.cpp \
	FileDescriptorBase.cpp \
	GenericDataEssenceDescriptorBase.cpp \
	GenericDescriptorBase.cpp \
	GenericPackageBase.cpp \
	GenericPictureEssenceDescriptorBase.cpp \
	GenericSoundEssenceDescriptorBase.cpp \
	GenericStreamTextBasedSetBase.cpp \
	GenericTrackBase.cpp \
	GroupOfSoundfieldGroupsLabelSubDescriptorBase.cpp \
	IdentificationBase.cpp \
	InterchangeObjectBase.cpp \
	LocatorBase.cpp \
	MaterialPackageBase.cpp \
	MCALabelSubDescriptorBase.cpp \
	MPEGVideoDescriptorBase.cpp \
	MultipleDescriptorBase.cpp \
	NetworkLocatorBase.cpp \
	PrefaceBase.cpp \
	RGBAEssenceDescriptorBase.cpp \
	SequenceBase.cpp \
	SoundfieldGroupLabelSubDescriptorBase.cpp \
	SourceClipBase.cpp \
	SourcePackageBase.cpp \
	StaticTrackBase.cpp \
	StructuralComponentBase.cpp \
	SubDescriptorBase.cpp \
	TextBasedDMFrameworkBase.cpp \
	TextBasedObjectBase.cpp \
	TextLocatorBase.cpp \
	TimecodeComponentBase.cpp \
	TrackBase.cpp \
	UTF8TextBasedSetBase.cpp \
	UTF16TextBasedSetBase.cpp \
	VBIDataDescriptorBase.cpp \
	VC2SubDescriptorBase.cpp \
	WaveAudioDescriptorBase.cpp


libbase_la_CXXFLAGS = $(LIBMXFPP_CFLAGS)



library_includedir = ${includedir}/libMXF++-@LIBMXFPP_MAJORMINOR@/libMXF++/metadata/base
library_include_HEADERS = \
	AES3AudioDescriptorBase.h \
	ANCDataDescriptorBase.h \
	AudioChannelLabelSubDescriptorBase.h \
	AVCSubDescriptorBase.h \
	CDCIEssenceDescriptorBase.h \
	ContentStorageBase.h \
	DCTimedTextDescriptorBase.h \
	DCTimedTextResourceSubDescriptorBase.h \
	DMFrameworkBase.h \
	DMSegmentBase.h \
	DMSetBase.h \
	DMSourceClipBase.h \
	EssenceContainerDataBase.h \
	EventTrackBase.h \
	FileDescriptorBase.h \
	GenericDataEssenceDescriptorBase.h \
	GenericDescriptorBase.h \
	GenericPackageBase.h \
	GenericPictureEssenceDescriptorBase.h \
	GenericSoundEssenceDescriptorBase.h \
	GenericStreamTextBasedSetBase.h \
	GenericTrackBase.h \
	GroupOfSoundfieldGroupsLabelSubDescriptorBase.h \
	IdentificationBase.h \
	InterchangeObjectBase.h \
	LocatorBase.h \
	MaterialPackageBase.h \
	MCALabelSubDescriptorBase.h \
	MPEGVideoDescriptorBase.h \
	MultipleDescriptorBase.h \
	NetworkLocatorBase.h \
	PrefaceBase.h \
	RGBAEssenceDescriptorBase.h \
	SequenceBase.h \
	SoundfieldGroupLabelSubDescriptorBase.h \
	SourceClipBase.h \
	SourcePackageBase.h \
	StaticTrackBase.h \
	StructuralComponentBase.h \
	SubDescriptorBase.h \
	TextBasedDMFrameworkBase.h \
	TextBasedObjectBase.h \
	TextLocatorBase.h \
	TimecodeComponentBase.h \
	TrackBase.h \
	UTF8TextBasedSetBase.h \
	UTF16TextBasedSetBase.h \
	VBIDataDescriptorBase.h \
	VC2SubDescriptorBase.h \
	WaveAudioDescriptorBase.h
